...
        <scene sceneID="yUG-lL-AsK">
            <objects>
                <viewController title="Detail" id="JEX-9P-axG" customClass="DetailViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="SYR-Wa-9uf"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Master - Detail Table View" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7OB-Zq-rdJ">
                                                    <rect key="frame" x="16" y="6" width="189.5" height="19.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Basic Controls" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hvb-1X-M6A">
                                                    <rect key="frame" x="16" y="6" width="105" height="19.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Button, TextField, Label, Picker, Switch, Slider, Image" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EX1-0d-8GG">
                                                    <rect key="frame" x="16" y="25.5" width="278" height="13.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="AUTiOS" id="jzC-oC-4V7"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="4Tn-VM-c7z" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
        <scene sceneID="smW-Zh-WAh">
            <objects>
                <tableViewController storyboardIdentifier="Master View" title="Master" clearsSelectionOnViewWillAppear="NO" id="7bK-jq-Zjz" customClass="MasterViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="r7i-6Z-zg0">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Item Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p1d-s8-h9I">
                                <rect key="frame" x="15" y="20" width="569" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
        <scene sceneID="xtY-sD-yWM">
            <objects>
                <navigationController storyboardIdentifier="New Item Navigation" title="New Item Navigation" automaticallyAdjustsScrollViewInsets="NO" id="bKG-po-25r" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kJL-Rg-nyn">
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a message" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3DL-xk-f7F">
                                <rect key="frame" x="16" y="124" width="223" height="30"/>
                                <accessibility key="accessibilityConfiguration" label="MessageLabel"/>
...
                                    <constraint firstAttribute="width" constant="46" id="6Xz-1w-GMT"/>
                                </constraints>
                                <state key="normal" title="Send">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="27.5" y="300" width="320" height="163"/>
                            </pickerView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mercury" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7yC-VW-TgM">
                                <rect key="frame" x="16" y="453" width="217" height="21"/>
                                <constraints>
...
