...

- (IBAction)sendButtonTapped:(UIButton *)sender
{
    NSLog(@"Button Tapped!");
    // Deprecated
    /*
    UIAlertView *alert = [[UIAlertView alloc]initWithTitle: @"Message"
                                                   message: self.messageText.text
                                                  delegate: self
                                         cancelButtonTitle:@"Cancel"
                                         otherButtonTitles:@"OK",nil];
    
    [self.view endEditing:YES];
    [alert setTag:1];
    [alrt show];
    */
    
...
